--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "test": "mocha --require ts-node/register src/test.ts",
+    "benchmark": "ts-node src/benchmark.ts",
     "compile": "rm -rf dist && tsc",
     "prepublish": "npm run compile"
   },
@@ -27,6 +28,7 @@
     "@types/node": "^12.0.0"
   },
   "devDependencies": {
+    "@leizm/benchmark": "^1.0.0",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.0",
